Avoid crash getting container when no FFmpegGlue has been created.

This can occur if an error occurs before FFmpegGlue has been
created by the demuxer.

BUG=879400
TEST=none

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I35349e94ab7c8d164210f91073e05b50d3c58482
Reviewed-on: https://chromium-review.googlesource.com/1199772
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588230}
Former-commit-id: 53150fcd2b65561797f5becfb628c37952a4eb04